--- a/frontend/src/app/common/components/footer/footer.component.html
+++ b/frontend/src/app/common/components/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div>Made by: Jakub Radzik</div>
       <div>
         <a href="https://github.com/radzikoska123">
-          <app-custom-button [icon]="icon" text="Visit my github" customClass="casualButton">
+          <app-custom-button [icon]="icon" text="Visit my github" [customClasses]="['casualButton']">
           </app-custom-button>
         </a>
       </div>
