--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -14,6 +14,17 @@
   text-align: center;
 }
 
+.background{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  z-index: -1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .buttonWrapper{
   width: 100%;
   max-width: 400px;
