--- a/frontend/src/app/common/components/footer/footer.component.html
+++ b/frontend/src/app/common/components/footer/footer.component.html
@@ -11,7 +11,7 @@
 
     </div>
     <div>
-      <div>App made using: https://spaceflightnewsapi.net/</div>
+      <div>App made using: <a class="api" href="https://spaceflightnewsapi.net">www.spaceflightnewsapi.net</a></div>
       <div>Recruitment task for the Solvro research club</div>
     </div>
   </div>
