--- a/frontend/src/app/articles-listing/tools/tools.component.css
+++ b/frontend/src/app/articles-listing/tools/tools.component.css
@@ -52,7 +52,6 @@ form {
   color: var(--font2);
   max-width: 110px;
   height: 50px;
-  /*margin: 0 30px;*/
   padding: 0 10px;
   outline: none;
   user-select: none;
@@ -76,16 +75,13 @@ div.page > *:not(input) {
   flex-direction: row-reverse;
   align-items: center;
   width: max-content;
-  padding: 10px;
   transition-duration: 0.4s;
 }
-
 
 .radioWrapper:hover, div.page > *:not(input):hover {
   background: var(--font2);
   color: var(--additional);
 }
-
 
 input[type="radio"] {
   display: none;
@@ -107,6 +103,9 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.radioWrapper label {
+  padding: 10px;
+}
 
 .hideForm {
   width: 100%;
