--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
 
   <div class="buttonWrapper">
     <a routerLink="/articles">
-      <app-custom-button [icon]="icon" text="Articles" [customClasses]="['casualButton']"></app-custom-button>
+      <app-custom-button [icon]="icon" text="Articles" [customClasses]="['reallyVisibleButton']"></app-custom-button>
     </a>
   </div>
 </div>
