--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -1,7 +1,7 @@
 .landing {
   padding-top: calc(var(--header-height) + 10px);
   width: 100%;
-  height: calc(100vh - var(--footer-height));
+  min-height: 90vh;
   max-width: 1024px;
   display: flex;
   flex-direction: column;
