landing page concept

--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,12 +1,12 @@
 <div class="landing">
-  <h1>Spaceflight news</h1>
-  <h2>Working On !</h2>
-  <h4>Enjoy. Hope for feedback <3</h4>
   <app-planet-rocket-animation></app-planet-rocket-animation>
-  <div class="buttonWrapper">
-    <a routerLink="/articles">
-      <app-custom-button [icon]="icon" text="Articles" [customClasses]="['reallyVisibleButton']"></app-custom-button>
-    </a>
+  <div class="titleWrapper">
+    <h1>Spaceflight news</h1>
+    <div class="buttonWrapper">
+      <a routerLink="/articles">
+        <app-custom-button [icon]="icon" text="Articles" [customClasses]="['reallyVisibleButton']"></app-custom-button>
+      </a>
+    </div>
   </div>
 </div>
 
