--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -1,5 +1,5 @@
 .landing {
-  padding-top: calc(var(--header-height) + 10px);
+  padding-top: calc(var(--header-height));
   width: 100%;
   min-height: 90vh;
   max-width: 1024px;
@@ -8,37 +8,38 @@
   justify-content: space-around;
   align-items: center;
   margin: auto;
-  color: var(--font);
+  color: var(--font3);
   font-family: 'Maven Pro', sans-serif;
   font-size: clamp(1rem, 5vw, 2rem);
   text-align: center;
 }
 
-.background{
-  position: absolute;
+.titleWrapper {
   width: 100%;
-  height: 100%;
-  border: 1px solid black;
-  z-index: -1;
+  position: absolute;
+  height: 50vh;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 15%, rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.3) 70%, rgba(0, 0, 0, 0.2) 85%, rgba(0, 0, 0, 0) 100%);
 }
 
-.buttonWrapper{
+.buttonWrapper {
   width: 100%;
   max-width: 400px;
 }
 
-h2{
+h2 {
   animation: pulse 2s linear infinite backwards;;
 }
 
 @keyframes pulse {
-  50%{
+  50% {
     transform: scale(1.3);
   }
-  100%{
+  100% {
     transform: scale(1);
   }
 }
