--- a/frontend/src/app/landing-page/planet-rocket-animation/planet-rocket-animation.component.html
+++ b/frontend/src/app/landing-page/planet-rocket-animation/planet-rocket-animation.component.html
@@ -8,6 +8,8 @@
   </div>
   <img id="rocket1" class="rockets objects" src="./assets/icons/rocket1.svg" alt="rocket">
   <img id="rocket2" class="rockets objects" src="./assets/icons/rocket2.svg" alt="rocket">
+  <img id="rocket3" class="rockets objects" src="./assets/icons/rocket2.svg" alt="rocket">
+  <img id="rocket4" class="rockets objects" src="./assets/icons/rocket2.svg" alt="rocket">
   <img id="ufo1" class="ufo objects" src="./assets/icons/ufo.svg" alt="ufo">
   <img id="ufo2" class="ufo objects" src="./assets/icons/ufo.svg" alt="ufo">
   <img id="ufo3" class="ufo objects" src="./assets/icons/ufo.svg" alt="ufo">
