--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -8,7 +8,7 @@
   justify-content: space-around;
   align-items: center;
   margin: auto;
-  color: var(--font3);
+  color: white;
   font-family: 'Maven Pro', sans-serif;
   font-size: clamp(1rem, 5vw, 2rem);
   text-align: center;
@@ -30,6 +30,7 @@
   width: 100%;
   max-width: 400px;
 }
+
 
 h2 {
   animation: pulse 2s linear infinite backwards;;
