--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -70,7 +70,7 @@ html[data-theme='dark'] {
   transition-duration: 0.5s;
 }
 
-.noFavorites{
+.noFavorites {
   color: grey;
   transition-duration: 0.5s;
 }
@@ -83,11 +83,11 @@ html[data-theme='dark'] {
   color: var(--font);
 }
 
-.reallyVisibleButton{
+.reallyVisibleButton {
   color: var(--font);
   opacity: 0.7;
+  font-size: clamp(1rem, 6vw, 1.3rem) !important;
 }
-
 
 /*SCROLL STYLE*/
 
