--- a/frontend/src/app/landing-page/planet-rocket-animation/planet-rocket-animation.component.html
+++ b/frontend/src/app/landing-page/planet-rocket-animation/planet-rocket-animation.component.html
@@ -15,5 +15,12 @@
   <img id="ufo3" class="ufo objects" src="./assets/icons/ufo.svg" alt="ufo">
   <img id="sat1" class="sat objects" src="./assets/icons/sat1.svg" alt="ufo">
   <img id="sat2" class="sat objects" src="./assets/icons/sat2.svg" alt="ufo">
+
+
+  <div id='stars'></div>
+  <div id='stars2'></div>
+  <div id='stars3'></div>
+
+
 </div>
 
