--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -22,6 +22,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  z-index: 13;
   background: rgb(0, 0, 0);
   background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 15%, rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.3) 70%, rgba(0, 0, 0, 0.2) 85%, rgba(0, 0, 0, 0) 100%);
 }
