landing page organization

--- a/frontend/src/app/landing-page/planet-rocket-animation/planet-rocket-animation.component.html
+++ b/frontend/src/app/landing-page/planet-rocket-animation/planet-rocket-animation.component.html
@@ -1,4 +1,6 @@
 <div class="animationWrapper">
+
+  <!--  PLANET-->
   <div class="planet">
     <div class="wrap">
       <div class="background"></div>
@@ -6,6 +8,7 @@
     </div>
     <div class="mask"></div>
   </div>
+  <!--  OBJECTS-->
   <img id="rocket1" class="rockets objects" src="./assets/icons/rocket1.svg" alt="rocket">
   <img id="rocket2" class="rockets objects" src="./assets/icons/rocket2.svg" alt="rocket">
   <img id="rocket3" class="rockets objects" src="./assets/icons/rocket2.svg" alt="rocket">
@@ -16,7 +19,7 @@
   <img id="sat1" class="sat objects" src="./assets/icons/sat1.svg" alt="ufo">
   <img id="sat2" class="sat objects" src="./assets/icons/sat2.svg" alt="ufo">
 
-
+  <!--  PARALLAX-->
   <div id='stars'></div>
   <div id='stars2'></div>
   <div id='stars3'></div>
