change names files, styles for parallax

--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,6 @@
 <div class="landing">
-  <app-planet-rocket-animation></app-planet-rocket-animation>
+<!--  <app-planet-rocket-animation></app-planet-rocket-animation>-->
+  <app-landing-animation></app-landing-animation>
   <div class="titleWrapper">
     <h1>Spaceflight news</h1>
     <div class="buttonWrapper">
