--- a/frontend/src/app/landing-page/landing-animation/landing-animation.component.css
+++ b/frontend/src/app/landing-page/landing-animation/landing-animation.component.css
@@ -4,3 +4,12 @@
   position: relative;
   overflow: hidden;
 }
+
+@keyframes animStar {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-2000px);
+  }
+}
