--- a/frontend/src/app/landing-page/landing-animation/landing-animation.component.html
+++ b/frontend/src/app/landing-page/landing-animation/landing-animation.component.html
@@ -18,12 +18,12 @@
   <img id="ufo3" class="ufo objects" src="./assets/icons/ufo.svg" alt="ufo">
   <img id="sat1" class="sat objects" src="./assets/icons/sat1.svg" alt="ufo">
   <img id="sat2" class="sat objects" src="./assets/icons/sat2.svg" alt="ufo">
+  <img id="deathStar" class="objects"  src="./assets/icons/death-star.png" alt="star wars">
 
   <!--  PARALLAX-->
-  <div id='stars'></div>
-  <div id='stars2'></div>
-  <div id='stars3'></div>
-
+  <div class="stars" id='stars1'></div>
+  <div class="stars" id='stars2'></div>
+  <div class="stars" id='stars3'></div>
 
 </div>
 
