--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
+@import "./variables.css";
+@import "./global-classes.css";
 
 * {
   margin: 0;
@@ -16,111 +18,19 @@ body {
   background: var(--main);
 }
 
-:root {
-  --header-height: 10vh;
-  --footer-height: 300px;
-}
-
-html[data-theme='light'] {
-  --header-bg: #007bff;
-  --switch-color: #180808;
-
-  --nav: rgb(25, 118, 210);
-  --foot: rgb(25, 118, 210);
-  --main: #fff;
-  --main-alpha: rgba(255, 255, 255, 0.7);
-  --main-2: rgb(252, 252, 252);
-  --main-3: rgb(246, 236, 236);
-
-  --additional: rgb(219, 219, 219);
-
-  --scroll-thumb: #927b7b;
-  --scroll-thumb-hover: #5b4848;
-
-  --font: #150b0b;
-  --font2: #007bff;
-  --font3: #150b0b;
-
-  --stars: #000;
-}
-
-html[data-theme='dark'] {
-  --header-bg: #013672;
-  --switch-color: #f6f6f6;
-
-  --nav: rgb(13, 71, 161);
-  --foot: rgb(13, 71, 161);
-
-  --main: rgb(48, 48, 48);
-  --main-alpha: rgba(48, 48, 48, 0.7);
-  --main-2: rgb(51, 51, 51);
-  --main-3: rgb(64, 64, 64);
-
-  --additional: rgb(68, 68, 68);
-
-  --scroll-thumb: #888;
-  --scroll-thumb-hover: #cfbcbc;
-
-  --font: #fff;
-  --font2: rgba(221, 24, 234, 0.97);
-  --font3: rgba(255, 255, 255, 0.97);
-
-  --stars: #fff;
-}
-
-/*GLOBAL CLASSES*/
-.favoriteButton {
-  color: #ff0000;
-  transition-duration: 0.5s;
-}
-
-.noFavorites {
-  color: grey;
-  transition-duration: 0.5s;
-}
-
-.refreshButton {
-  color: #9494ef;
-}
-
-.casualButton {
-  color: var(--font);
-}
-
-.reallyVisibleButton {
-  color: var(--font);
-  opacity: 0.7;
-  font-size: clamp(1rem, 6vw, 1.3rem) !important;
-}
-
-.noArticles{
-  color: var(--main);
-  background: var(--main) !important;
-  cursor: auto !important;
-}
-
-.noArticles:hover{
-  color: var(--main) !important;
-  background: var(--main) !important;
-}
-
 /*SCROLL STYLE*/
-
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
-
 /* Track */
 ::-webkit-scrollbar-track {
   background: var(--main-3);
 }
-
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: var(--scroll-thumb);
 }
-
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--scroll-thumb-hover);
